@@ -164,6 +164,7 @@ Fixes:
    * Fix scroller acceleration bug. It was accelerated even it's scrolled after finishing the previous scroll. This happens with page scroll enabled.
    * Fix 1byte invalid read & do memset, rewind if needed.
    * Fix the standard of scrollbar-calculation from the scroller's x to pan's x.
+   * Fix elm_index to send a signal to the selected item in smart theme.
    
 Removals:
 
