@@ -1080,3 +1080,7 @@
 
         * Fix the standard of scrollbar-calculation from the scroller's x to pan's x.
         The scrollbar have to sync with pan. if not, the scrollbar doesn't move even if the position of content moves.
+
+2013-03-04  Jaeun Choi
+
+        * Fix elm_index to send a signal to the selected item in smart theme.
